# alertrixdjango

./: LICENSE  README.md  pyproject.toml
alertrix/: admin.py  apps.py  context_processors.py  matrix_callbacks.py  middleware.py  mixins.py  models.py  querysets.py  test.py  test_encryption.py  test_matrixrooms.py  urls.py  utils.py  widgets.py
alertrix/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
alertrix/accounts/migrations/: 0001_initial.py
alertrix/callbacks/: __init__.py  directmessage.py  encryption.py  onboarding.py
alertrix/callbacks/account/: __init__.py
alertrix/callbacks/alertrix/: __init__.py
alertrix/callbacks/emergency/: alert.py
alertrix/callbacks/start/: __init__.py
alertrix/callbacks/widget/: __init__.py
alertrix/command_line_interface/: argparse.py  cli.py
alertrix/events/v1/: __init__.py
alertrix/forms/: __init__.py  alert_channel.py  company.py  matrixroom.py  unit.py
alertrix/forms/emergency/: alert.py
alertrix/management/commands/: test_alertrix.py
alertrix/migrations/: 0001_initial.py  0002_alter_directmessage_with_user_widget.py  0003_remove_handler.py  0004_remove_directmessage_matrixroom_ptr_and_more.py  0005_widget_activation_secret.py  0006_company.py  0007_unit.py  0008_directmessage.py  0009_alertchannel.py
alertrix/static/alertrix/: form_management.js  style.css
alertrix/templates/alertrix/: applicationserviceregistration_detail.html  base.html  (+12 more)
alertrix/templatetags/: alertrix_roles.py
alertrix/views/: __init__.py  alert_channel.py  appservice.py  company.py  emergency.py  matrixroom.py  unit.py
(+10 files in other folders)
