[tool.poetry]
name = "alertrix"
version = "0.0.0"
description = "Der Messenger für Einsatzkräfte"
authors = ["Fabian Becker <info@alertrix.net>"]
license = "AGPLv3+"
readme = "README.md"
include = [
    "alertrix/locale/*/LC_MESSAGES/django.mo",
]
packages = [
    {include = "alertrix", from = "."},
]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.5"
matrix-synapse = "^1.109.0"
matrix-nio = "0.24.0"
djangomatrixappservice = { url = "https://codeberg.org/alertrix/djangomatrixappservice/releases/download/v0.1.0a243401/djangomatrixappservice-0.1.0a243401.tar.gz" }


[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"
